--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hritik",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
